--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <!--Animations  -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Leckerli+One&family=Montserrat:wght@400;700;800&family=Pacifico&family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
   <!-- Bootstrap CDN -->
@@ -24,9 +25,9 @@
   <header>
     <img class="position-absolute" src="./assets/images/Rectangle 1.png">
     <nav class="d-flex">
-      <span class="mt-auto ml-0 mb-auto mr-auto" id="logo"><span class="active">Ozelyo</span>Taste</span>
+      <span class="mt-auto ml-0 mb-auto mr-auto" id="logo"><span class="active1">Ozelyo</span>Taste</span>
       <ul class="d-none d-flex mt-auto mr-0 mb-auto ml-auto">
-        <li class="active">Home</li>
+        <li class="active1">Home</li>
         <li>About Us</li>
         <li>Menu</li>
         <li>Order</li>
@@ -43,57 +44,57 @@
 
 
     <div class="about d-flex">
-      <img class="mr-5" src="./assets/images/Rectangle 2.png" alt="About Ozelyo Taste">
-      <section class="mt-auto mb-auto ml-5">
-        <h3 class="active mb-5">About Ozelyo_Taste</h3>
+      <img data-aos="fade-right" data-aos-duration="1000" class="mr-5" src="./assets/images/Rectangle 2.png" alt="About Ozelyo Taste">
+      <section data-aos="fade-left" data-aos-duration="1000" class="mt-auto mb-auto ml-5">
+        <h3 class="active1 mb-5">About Ozelyo_Taste</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </section>
     </div>
 
     <main>
     <div class="text-center">
-      <h3 class="active mb-5">Our Menu</h3>
+      <h3 class="active1 mb-5">Our Menu</h3>
       <ul class="mb-5 p-0 d-flex">
-        <li class="active-menu">Cakes</li>
+        <li class="active1-menu">Cakes</li>
         <li>Cookies</li>
         <li>Pastries</li>
         <li>Bread</li>
       </ul>
 
       <section class="row">
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 6.png">
           <p class="p-3">Chocolate cupcake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 7.png">
           <p class="p-3">Sponge cake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 8.png">
           <p class="p-3">Fruit cake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 9.png">
           <p class="p-3">Pumpkin cake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 10.png">
           <p class="p-3">Cheese cake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 11.png">
           <p class="p-3">Muffins cake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 12.png">
           <p class="p-3">Dessert cake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 13.png">
           <p class="p-3">Birthday cake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="zoom-in-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 15.png">
           <p class="p-3">Wedding cake</p>
         </section>
@@ -101,30 +102,30 @@
     </div>
 
     <div class="text-center">
-      <h3 class="active">Our Hot Selling Recipes</h3>
+      <h3 class="active1">Our Hot Selling Recipes</h3>
       <p class="mb-5">Explore our hot selling recipes; giving you a piece of heaven</p>
       <section class="row">
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="flip-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 17.png">
           <p class="p-3">Cupcake</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="flip-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 18.png">
           <p class="p-3">Cake donuts</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="flip-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 19.png">
           <p class="p-3">Bread</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="flip-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 20.jpg">
           <p class="p-3">Cinnamon roll</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="flip-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 21.jpg">
           <p class="p-3">Macaroons</p>
         </section>
-        <section class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
+        <section data-aos="flip-up" data-aos-duration="1000" class="pl-3 pr-3 pb-5 col-sm-12 col-md-6 col-lg-4">
           <img src="./assets/images/Rectangle 22.jpg">
           <p class="p-3">Flavored biscuits</p>
         </section>
@@ -132,9 +133,9 @@
     </div>
   </main>
 
-  <div class="text-center testimonals">
-    <h3 class="active mb-5">Testimonals</h3>
-    <section class="d-flex">
+  <div class="glider-contain text-center testimonals">
+    <h3 class="active1 mb-5">Testimonals</h3>
+    <section class="glider d-flex">
       <section class="bg-white p-5 m-4">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
@@ -150,10 +151,14 @@
           <span>Victoria Daniels</span>
       </section>
     </section>
+
+    <button aria-label="Previous" class="glider-prev">«</button>
+    <button aria-label="Next" class="glider-next">»</button>
+    <div role="tablist" class="dots"></div>
   </div>
 
   <footer class="p-5 row">
-    <span class="col-3 margin" id="logo"><span class="active">Ozelyo</span>Taste</span>
+    <span class="col-3 margin" id="logo"><span class="active1">Ozelyo</span>Taste</span>
     <ul class="col-3 margin p-0">
       <li class="p-2">Contact Us</li>
       <li class="p-2">Phone: +44 7859 000674</li>
@@ -167,6 +172,10 @@
     </ul>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
   <script src="./assets/js/main.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
