--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="about d-flex">
       <img data-aos="fade-right" data-aos-duration="1000" class="mr-5" src="./assets/images/Rectangle 2.png" alt="About Ozelyo Taste">
-      <section data-aos="fade-left" data-aos-duration="1000" class="mt-auto mb-auto ml-5">
+      <section data-aos="fade-rigth" data-aos-duration="1000" class="mt-auto mb-auto ml-5">
         <h3 class="active1 mb-5">About Ozelyo_Taste</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </section>
